samples/_failures_safe/1761004659_8521ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3520d61e.c: In function ‘main’:
./samples/SAFE/__tmp_3520d61e.c:131:9: error: expected expression at end of input
  131 |         else if (strcmp(entries[i].level, "ERROR") ==
      |         ^~~~
./samples/SAFE/__tmp_3520d61e.c:131:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3520d61e.c:131:9: error: expected declaration or statement at end of input
